@@ -48,8 +48,8 @@ public class OperaDriverManager extends BrowserManager {
 	@Override
 	protected List<URL> getDrivers(Architecture arch, String version) throws IOException {
 		URL driverUrl = WdmConfig.getUrl("wdm.operaDriverUrl");
-		String driverVersion = version.equals(DriverVersion.NOT_SPECIFIED.name()) ? WdmConfig
-				.getString("wdm.operaDriverVersion") : version;
+		String driverVersion = version.equals(DriverVersion.NOT_SPECIFIED.name())
+				? WdmConfig.getString("wdm.operaDriverVersion") : version;
 
 		BufferedReader reader = new BufferedReader(new InputStreamReader(driverUrl.openStream()));
 
@@ -59,9 +59,9 @@ public class OperaDriverManager extends BrowserManager {
 		GitHubApi release;
 		if (driverVersion == null || driverVersion.isEmpty()
 				|| driverVersion.equalsIgnoreCase(DriverVersion.LATEST.name())) {
-			log.info("Connecting to {} to check lastest OperaDriver release", driverUrl);
+			log.debug("Connecting to {} to check lastest OperaDriver release", driverUrl);
 			version = releaseArray[0].getName();
-			log.info("Latest driver version: {}", version);
+			log.debug("Latest driver version: {}", version);
 			release = releaseArray[0];
 		} else {
 			version = driverVersion;
