@@ -1,3 +1,10 @@
+webdrivermanager (1.2.2)
+
+  + Changed log level to DEBUG
+
+ -- Boni Garcia <boni.gg@gmail.com>  Wen, 19 Aug 2015 10:29:00 +0200
+
+
 webdrivermanager (1.2.1)
 
   + Improved driver version management
